cabal-version:      3.4
name:               cc-demo
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cc-demo
    import:           warnings
    main-is:          Main.hs
    other-modules:    Coroutine
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, ghc-prim
    hs-source-dirs:   app
    default-language: Haskell2010
