cabal-version:          3.4
name:                   coroutine
version:                0.1.0.0
license:                ISC
license-file:           LICENSE
author:                 Eric Mertens
maintainer:             emertens@gmail.com
build-type:             Simple
extra-doc-files:        CHANGELOG.md

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    exposed-modules:
        Coroutine

    build-depends:
        base ^>={4.19, 4.20, 4.21},
        ghc-prim,

executable demo
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    buildable:          False
    build-depends:
        base,
        coroutine,
